--- a/movie/app/views/pages/admin.jade
+++ b/movie/app/views/pages/admin.jade
@@ -3,8 +3,27 @@ extends ../layout
 block content
 	.container
 		.row
-			form.form-horizontal(method="post",action="/admin/movie/new")
-				input(type="hidden",name="movie[_id]",value="#{movie._id}")
+			form.form-horizontal(method="post",action="/admin/movie/new",enctype="multipart/form-data")
+				.form-group
+					label.col-sm-2.control-label 豆瓣同步
+					.col-sm-10
+						input#douban.form-control(type="text")
+				if movie._id
+					input(type="hidden", name="movie[_id]", value=movie._id)
+				.form-group
+					label.col-sm-2.control-label(for="inputCategory") 电影分类
+					.col-sm-10
+						input#inputCategory.form-control(type="text", name="movie[categoryName]", value=movie.categoryName)
+				.form-group
+					label.col-sm-2.control-label 分类选择
+					.col-sm-10
+						each cat in categories
+							label.radio-inline
+								if movie.category
+									input(type="radio", name="movie[category]", value=cat._id, checked=cat._id.toString()==movie.category.toString())
+								else
+									input(type="radio", name="movie[category]", value=cat._id) 
+									| #{cat.name}
 				.form-group
 					label.col-sm-2.control-label(for="inputTitle") 电影名字
 					.col-sm-10
@@ -40,4 +59,5 @@ block content
 				.form-group
 					.col-sm-2
 						input#inputSummary.form-control(type="submit",value="录入")
+	script(src='/build/admin.min.js')
 				
