--- a/movie/app/views/pages/list.jade
+++ b/movie/app/views/pages/list.jade
@@ -21,8 +21,8 @@ block content
 							td #{item.doctor}
 							td #{item.country}
 							td #{item.year}
-							//-td #{moment(item.meta.updateAt,"MM/DD/YYYY").formNow()}
-							td #{item.meta.updateAt}
+							//-td #{moment(item.meta.updateAt).format('MM/DD/YYYY')}
+							td #{moment(item.meta.updateAt).format('MM/DD/YYYY')}
 							td: a(target="_blank",href="../movie/#{item._id}") 查看
 							td: a(target="_blank",href="../admin/update/#{item._id}") 修改
 							td
